gramatical fix on product names

--- a/src/templates/sections/products-en.njk
+++ b/src/templates/sections/products-en.njk
@@ -123,7 +123,7 @@
                     <img src="img/products/justone/jo-1.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid easy iron
+                    Liquid Easy Iron
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -131,7 +131,7 @@
                     <img src="img/products/justone/jo-2.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid detergent
+                    Liquid Detergent
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -167,7 +167,7 @@
                     <img src="img/products/greendream/gd-1.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid detergent
+                    Liquid Detergent
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -175,7 +175,7 @@
                     <img src="img/products/greendream/gd-2.png" alt="Liquído Detergente">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid detergent
+                    Liquid Detergent
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -191,7 +191,7 @@
                     <img src="img/products/greendream/gd-4.jpg" alt="Dishwasher">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                     <img src="img/products/zaz/zaz-3.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Bathroom disinfectant
+                    Bathroom Disinfectant
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -235,7 +235,7 @@
                     <img src="img/products/zaz/zaz-4.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -243,7 +243,7 @@
                     <img src="img/products/zaz/zaz-5.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -251,7 +251,7 @@
                     <img src="img/products/zaz/zaz-6.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -259,7 +259,7 @@
                     <img src="img/products/zaz/zaz-7.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -267,7 +267,7 @@
                     <img src="img/products/zaz/zaz-8.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -275,7 +275,7 @@
                     <img src="img/products/zaz/zaz-9.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -283,7 +283,7 @@
                     <img src="img/products/zaz/zaz-10.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -291,7 +291,7 @@
                     <img src="img/products/zaz/zaz-11.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -299,7 +299,7 @@
                     <img src="img/products/zaz/zaz-12.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -307,7 +307,7 @@
                     <img src="img/products/zaz/zaz-13.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -315,7 +315,7 @@
                     <img src="img/products/zaz/zaz-14.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -323,7 +323,7 @@
                     <img src="img/products/zaz/zaz-15.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All purpose cleaners
+                    All Purpose Cleaners
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -331,7 +331,7 @@
                     <img src="img/products/zaz/zaz-16.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Glass and surfaces
+                    Glass and Surfaces
                   </div>
                 </div>
               </div>
@@ -351,7 +351,7 @@
                     <img src="img/products/softly/soft-1.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -359,7 +359,7 @@
                     <img src="img/products/softly/soft-2.png" alt="Liquído Detergente">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -367,7 +367,7 @@
                     <img src="img/products/softly/soft-3.png" alt="Dishwasher">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
                  <div class="product-line-product">
@@ -375,7 +375,7 @@
                     <img src="img/products/softly/soft-4.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
               </div>
@@ -395,7 +395,7 @@
                     <img src="img/products/perceptions/per-1.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Glass and surfaces
+                    Glass and Surfaces
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -411,7 +411,7 @@
                     <img src="img/products/perceptions/per-3.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Anti-bacterial and anti-fungi
+                    Anti-bacterial and Anti-fungi
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -427,7 +427,7 @@
                     <img src="img/products/perceptions/per-5.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -435,7 +435,7 @@
                     <img src="img/products/perceptions/per-6.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -443,7 +443,7 @@
                     <img src="img/products/perceptions/per-7.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric softener
+                    Fabric Softener
                   </div>
                 </div>
               </div>
