#1 add images to 'desarrollo' and 'maquila' carroussels

--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -498,32 +498,141 @@
   margin-top 30px
 .servicesOne
   width 378px
+  
+  .modal-service-image.one
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-1.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size contain
+    background-position center center
+  .modal-service-image.two
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-2.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.three
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-3.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.four
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-4.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.five
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-5.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.six
+    width 376px
+    height 300px
+    background url("../img/desarrollo/desarrollo-6.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size contain
+    background-position center center
+    
+
 .servicesTwo
   width 378px
-.modal-service-image.one
-  width 376px
-  height 238px
-  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
-  background-attachment scroll
-  background-repeat no-repeat
-  background-size cover
-  background-position center top
-.modal-service-image.two
-  width 376px
-  height 238px
-  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
-  background-attachment scroll
-  background-repeat no-repeat
-  background-size cover
-  background-position center top
-.modal-service-image.three
-  width 376px
-  height 238px
-  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
-  background-attachment scroll
-  background-repeat no-repeat
-  background-size cover
-  background-position center top
+  
+  .modal-service-image.one
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-1.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.two
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-2.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size contain
+    background-position center center
+  .modal-service-image.three
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-3.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.four
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-4.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.five
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-5.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.six
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-6.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.seven
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-7.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.eight
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-8.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.nine
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-9.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+  .modal-service-image.ten
+    width 376px
+    height 300px
+    background url("../img/maquila/maquila-10.jpg")
+    background-attachment scroll
+    background-repeat no-repeat
+    background-size cover
+    background-position center center
+    
 .service-prev, .service-next
   width 40px
   height auto
