#1 add images to 'desarrollo' and 'maquila' carroussels

--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -18,6 +18,9 @@
           <div class="modal-service-image one"></div>
           <div class="modal-service-image two"></div>
           <div class="modal-service-image three"></div>
+          <div class="modal-service-image four"></div>
+          <div class="modal-service-image five"></div>
+          <div class="modal-service-image six"></div>
         </div>
       </div>
     </div>
@@ -36,6 +39,13 @@
           <div class="modal-service-image one"></div>
           <div class="modal-service-image two"></div>
           <div class="modal-service-image three"></div>
+          <div class="modal-service-image four"></div>
+          <div class="modal-service-image five"></div>
+          <div class="modal-service-image six"></div>
+          <div class="modal-service-image seven"></div>
+          <div class="modal-service-image eight"></div>
+          <div class="modal-service-image nine"></div>
+          <div class="modal-service-image ten"></div>
         </div>
       </div>
     </div>
