#22 add images to  carroussel

--- a/src/templates/sections/plant.njk
+++ b/src/templates/sections/plant.njk
@@ -16,17 +16,37 @@
       </div>
     </div>
     <div class="aguaviento-slider plant-carroussel">
-      <div class="plant-slide-one">
+      <div class="plant-slide-1">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
         </div>
       </div>
-      <div class="plant-slide-two">
+      <div class="plant-slide-2">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
         </div>
       </div>
-      <div class="plant-slide-three">
+      <div class="plant-slide-3">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+        </div>
+      </div>
+      <div class="plant-slide-4">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+        </div>
+      </div>
+      <div class="plant-slide-5">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+        </div>
+      </div>
+      <div class="plant-slide-6">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+        </div>
+      </div>
+      <div class="plant-slide-7">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
         </div>
