--- a/src/styl/sections/plant.styl
+++ b/src/styl/sections/plant.styl
@@ -6,7 +6,7 @@
 
 .plant-carroussel
   width 100%
-  height 400px
+  height 37.54vw
   position relative
   .slick-arrow
     border none
@@ -29,11 +29,11 @@
     height 100%
     .slick-track
       height 100%
-      .plant-slide-one, .plant-slide-two, .plant-slide-three
+      [class*='plant-slide-']
         width 100%
         height 100%
-        background url("../img/plant-slide-one.png")
         background-size cover
+        background-position center
         .slider-title
           position relative
           img
@@ -48,6 +48,27 @@
             position absolute
             top 48px
             left 45px
+.plant-slide-1
+  background-image url('../img/instalaciones/instalaciones-1.jpg')
+
+.plant-slide-2
+  background-image url('../img/instalaciones/instalaciones-2.jpg')
+
+.plant-slide-3
+  background-image url('../img/instalaciones/instalaciones-3.jpg')
+
+.plant-slide-4
+  background-image url('../img/instalaciones/instalaciones-4.jpg')
+
+.plant-slide-5
+  background-image url('../img/instalaciones/instalaciones-5.jpg')
+
+.plant-slide-6
+  background-image url('../img/instalaciones/instalaciones-6.jpg')  
+
+.plant-slide-7
+  background-image url('../img/instalaciones/instalaciones-7.jpg')
+
 @media only screen and (max-width 414px)
   .aguaviento-content.plant
     width 300px
