#10 add images to  carroussel

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -6,7 +6,7 @@
 
 .products-carroussel
   width 100%
-  height 438px
+  height 49.42vw
   position relative
   .slick-arrow
     border none
@@ -61,13 +61,7 @@
     height 100%
     .slick-track
       height 100%
-      .products-slide-one,
-      .products-slide-two,
-      .products-slide-three
-        width 100%
-        height 100%
-        background url("../img/products-slide-one.png")
-        background-size cover
+      [class*='products-slide-']
         .slider-title
           position relative
           img
@@ -84,6 +78,76 @@
             left 55px
             width 111px
             letter-spacing .3px
+.products-slide-
+  &one
+    background url("../img/maquinaria/maquinaria-1.jpg")
+    background-size cover
+  
+  &two
+    background url("../img/maquinaria/maquinaria-2.jpg")
+    background-size cover
+    background-position center
+  
+  &three
+    background url("../img/maquinaria/maquinaria-3.jpg")
+    background-position center
+    background-size cover
+
+  &four
+    background url("../img/maquinaria/maquinaria-4.jpg")
+    background-position center
+    background-size cover
+
+  &five
+    background url("../img/maquinaria/maquinaria-5.jpg")
+    background-position center
+    background-size cover
+  
+  &six
+    background url("../img/maquinaria/maquinaria-6.jpg")
+    background-position center
+    background-size cover
+
+  &seven
+    background url("../img/maquinaria/maquinaria-7.jpg")
+    background-position center
+    background-size cover
+
+  &eight
+    background url("../img/maquinaria/maquinaria-8.jpg")
+    background-size cover
+    background-position center 10%
+
+  &nine
+    background url("../img/maquinaria/maquinaria-9.jpg")
+    background-size cover
+    background-position: center 40%;
+
+  &ten
+    background url("../img/maquinaria/maquinaria-10.jpg")
+    background-position center
+    background-size cover
+
+  &eleven
+    background url("../img/maquinaria/maquinaria-11.jpg")
+    background-position center
+    background-size cover
+
+  &twelve
+    background url("../img/maquinaria/maquinaria-12.jpg")
+    background-position center
+    background-size cover
+
+  &thirteen
+    background url("../img/maquinaria/maquinaria-13.jpg")
+    background-position center
+    background-size cover
+
+  &fourteen
+    background url("../img/maquinaria/maquinaria-14.jpg")
+    background-position center
+    background-size cover
+
 .products-divider-container
   width 516px
   margin 0 auto
