--- a/src/templates/sections/products-en.njk
+++ b/src/templates/sections/products-en.njk
@@ -474,7 +474,9 @@
               <h4 class="aguaviento-font-montserrat-medium">Conoce más de la marca</h4>
             </div>
             <div class="meet-us-button">
-              <button class="aguaviento-font-montserrat-extralight">CONOCE MÁS AQUÍ</button>
+              <a href="https://www.limpius.com/">
+                <button class="aguaviento-font-montserrat-extralight">CONOCE MÁS AQUÍ</button>
+              </a>
             </div>
           </div>
         </div>
