#10 add images to carroussel in english version

--- a/src/templates/sections/products-en.njk
+++ b/src/templates/sections/products-en.njk
@@ -28,37 +28,67 @@
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Llenadora 10L</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-four">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Etiquetadora</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-five">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Tapadora</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-six">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina de soplado de polietileno</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-seven">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina de inyección de polipropileno</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-eight">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina para llenado de pouch</h3>
         </div>
       </div>
-      <div class="products-slide-three">
+      <div class="products-slide-nine">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
+        </div>
+      </div>
+      <div class="products-slide-ten">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
+        </div>
+      </div>
+      <div class="products-slide-eleven">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
+        </div>
+      </div>
+      <div class="products-slide-twelve">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
+        </div>
+      </div>
+      <div class="products-slide-thirteen">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
+        </div>
+      </div>
+      <div class="products-slide-fourteen">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
           <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
