--- a/src/styl/sections/plant.styl
+++ b/src/styl/sections/plant.styl
@@ -6,13 +6,13 @@
 
 .plant-carroussel
   width 100%
-  height 37.54vw
+  height 50vw
   position relative
   .slick-arrow
     border none
     background none
     position absolute
-    top 180px
+    top 45%
     width 23px
     height 42px
     background-size cover
@@ -49,25 +49,25 @@
             top 48px
             left 45px
 .plant-slide-1
-  background-image url('../img/instalaciones/instalaciones-1.jpg')
+  background-image url('../img/instalaciones/instalaciones-b1.jpg')
 
 .plant-slide-2
-  background-image url('../img/instalaciones/instalaciones-2.jpg')
+  background-image url('../img/instalaciones/instalaciones-b2.jpg')
 
 .plant-slide-3
-  background-image url('../img/instalaciones/instalaciones-3.jpg')
+  background-image url('../img/instalaciones/instalaciones-b3.jpg')
 
 .plant-slide-4
-  background-image url('../img/instalaciones/instalaciones-4.jpg')
+  background-image url('../img/instalaciones/instalaciones-b4.jpg')
 
 .plant-slide-5
-  background-image url('../img/instalaciones/instalaciones-5.jpg')
+  background-image url('../img/instalaciones/instalaciones-b5.jpg')
 
 .plant-slide-6
-  background-image url('../img/instalaciones/instalaciones-6.jpg')  
+  background-image url('../img/instalaciones/instalaciones-b6.jpg')  
 
 .plant-slide-7
-  background-image url('../img/instalaciones/instalaciones-7.jpg')
+  background-image url('../img/instalaciones/instalaciones-b7.jpg')
 
 @media only screen and (max-width 414px)
   .aguaviento-content.plant
@@ -75,4 +75,6 @@
     .aguaviento-section-title
       img
         right 35px
+  .plant-carroussel .slider-title
+    display none
     
