#10 change images in carroussel, add new logos, and a banner

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -6,7 +6,7 @@
 
 .products-carroussel
   width 100%
-  height 49.42vw
+  height 50vw
   position relative
   .slick-arrow
     border none
@@ -345,7 +345,7 @@
   .product-line-divider
     margin-top 138px
   .brands
-    width 486px
+    width 510px
     margin 75px auto
     display flex
     flex-wrap wrap
@@ -355,28 +355,69 @@
     .brand
       display inline-block
       /*change margins when you add new brands*/
-      &.golden-hill img
-        margin-right 45px
-        margin-bottom 45px
-        width 112px
-        height 67px
       &.walmart img
         margin-right 45px
         margin-bottom 45px
         width 152px
         height 38px
       &.costco img
+        margin-right 45px
+        margin-bottom 45px
+        width 132px
+        height 47px
+      &.heb img
         margin-right 0
         margin-bottom 45px
         width 132px
         height 47px
+      &.aml img
+        margin-right 11px
+        margin-bottom 45px
+        width 132px
+        height 76px
+      &.city img
+        margin-right 45px
+        margin-bottom 45px
+        width 132px
+        height 120px
+      &.golden-hill img
+        margin-right 0px
+        margin-bottom 45px
+        width 112px
+        height 82px
+      &.lacomer img
+        margin-right 45px
+        margin-bottom 45px
+        width 132px
+        height 27px
+      &.ley img
+        margin-right 45px
+        margin-bottom 45px
+        width 132px
+        height 77.5px
       &.sams img
         margin-right 0
         margin-bottom 0
         width 96px
         height 96px
+      &.smart img
+        margin-right 45px
+        margin-bottom 45px
+        width 132px
+        height 104px
+      &.soriana img
+        margin-right 0
+        margin-bottom 45px
+        width 132px
+        height 33.5px
+
 .meet-us
-  margin-top 300px
+  margin-top 70px
+  
+  img
+    width 100%
+    margin-bottom 50px
+
   .meet-us-title
     color #0d74b9
     font-size 21px
