--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -563,7 +563,7 @@
   .modal-service-image.two
     width 500px
     height 300px
-    background url("../img/maquila/maquila-2.jpg")
+    background url("../img/maquila/maquila-2.JPG")
     background-attachment scroll
     background-repeat no-repeat
     background-size cover
