#12 change company image and fix modal titles font

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -147,7 +147,8 @@
       font-size 21px
       color #2582c0
       font-weight 900
-      letter-spacing -.5px
+      letter-spacing 0.4px
+      font-weight $thin
       margin-bottom 18px
       h3
         margin 0
