#12 change background position

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -71,8 +71,9 @@
       height 65px
 .company-cover
   height 384px
-  background  url('../img/screen-shot-2017-05-25-at-6-57-59-pm@3x.png')
+  background  url('../img/company-bg.JPG')
   background-size cover
+  background-position center 80%
   
 
 .company-certification
