#1 change cover slider background positions

--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -62,21 +62,21 @@
   background-attachment scroll
   background-repeat no-repeat
   background-size cover
-  background-position center bottom
+  background-position center 24%
 .aguaviento-header.two
   height 442px !important
   background url("../img/manos.jpg")
   background-attachment scroll
   background-repeat no-repeat
   background-size cover
-  background-position right center
+  background-position right 10%
 .aguaviento-header.three
   height 442px !important
   background url("../img/group-24@3x.png")
   background-attachment scroll
   background-repeat no-repeat
   background-size cover
-  background-position center bottom
+  background-position center 42%
 .blue-filler-container
   position relative
   width 100%
