#10 fix mobile products size and increase product name container

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -310,27 +310,33 @@
             &.easyiron-justone
               img
                 height 100%
+                width auto !important
             &.aroma-justone
               img
                 height 100%
+                width auto !important
             &.woodsandlaminate-justone
               img
                 height 100%
+                width auto !important
             &.dark-clothes-zaz
               img
                 height 100%
+                width auto !important
             &.detergent-liquid-zaz
               img
                 height 100%
+                width auto !important
             &.dishwasher-zaz
               img
                 height 100%
+                width auto !important
           .product-description
             text-align center
             color #585858
             font-size 13px
             padding-right 3px
-            height 18px
+            height 30px
   .product-line-divider
     height 1px
     margin 0 auto
