#10 remove some brands from maquila section and reposition slick dots in mobile version

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -371,45 +371,25 @@
         margin-bottom 45px
         width 132px
         height 47px
-      &.heb img
-        margin-right 0
+      &.city img
+        margin-right 0px
         margin-bottom 45px
         width 132px
-        height 47px
+        height 120px
       &.aml img
         margin-right 11px
         margin-bottom 45px
         width 132px
         height 76px
-      &.city img
-        margin-right 45px
-        margin-bottom 45px
-        width 132px
-        height 120px
-      &.golden-hill img
-        margin-right 0px
-        margin-bottom 45px
-        width 112px
-        height 82px
       &.lacomer img
         margin-right 45px
         margin-bottom 45px
-        width 132px
-        height 27px
+        width 190px
       &.ley img
-        margin-right 45px
+        margin-right 0px
         margin-bottom 45px
         width 132px
         height 77.5px
-      &.sams img
-        margin-right 0
-        margin-bottom 0
-        width 96px
-        height 96px
-      &.smart img
-        margin-right 45px
-        margin-bottom 45px
-        width 105px
       &.soriana img
         margin-right 0
         margin-bottom 45px
@@ -521,3 +501,6 @@
             margin 0
     .meet-us
       margin-top 200px
+  .products-carroussel
+    .slick-dots
+      top 0
